--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 dist
 build
 eggs
+.eggs
 parts
 bin
 var
@@ -41,3 +42,6 @@ output/*/index.html
 
 # Sphinx
 docs/_build
+
+# macos garbage
+.DS_Store
