--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,15 @@
 [tox]
 skipsdist = True
 usedevelop = True
-envlist = py{27,34,35,36},
+envlist = py{27,36,37},
           flake8
 
 [testenv]
 install_command = pip install -e ".[dev]" -U {packages}
 basepython =
     py27: python2.7
-    py34: python3.4
-    py35: python3.5
-    py35: python3.6
+    py36: python3.6
+    py37: python3.7
 deps =
     -r{toxinidir}/requirements.txt
 commands = python setup.py test
@@ -21,4 +20,4 @@ basepython =
 deps =
     flake8
 commands =
-    flake8 src/python_boilerplate
+    flake8 simpleneighbors
